# therapeia

./: .codespellrc  .env.example  .gitignore  Cargo.toml  README.md  devenv.nix  devenv.yaml  docker-compose.yml  secretspec.toml  test.txt
.sqlx/: query-0c0b7e0f9c14416213a1eb472896b8555a87aac4ba3c42266a3b6b9fb584d5db.json  query-0d63a9a95490c768e8942338db453ac42e03886739712cee3a1b26c86b616073.json  query-0f2c37bbde034cba2a04388629e5647ff50f83504cba4147d3409d90452c4617.json  query-12fae5e85e27f37b8b172437be82ca6dcf20e1882ef9c7a20ad46848ae586203.json  query-1c1abb50f7588f57d75756be7658bce5259df09c2309751377430e8550f513cd.json  query-23d1ae743c742d65dcdfaf7eb4b2c9aec4af36584b29d28acffefa99549156fe.json  query-270fca8c0387710d491f6fa9a89934e93f53dcb77f02c1a06b6841c007e81a56.json  query-2a682ffa125535ff742070178fd15bfedf0fc5deb46d6541096208a68dd219f8.json  query-2da48ef5070eb561a55f7ee22c82966e90e7769c98ad38f32b87762b90a90af3.json  query-36b36f038c45021027259e07eda0d714e2bdfd462d7c723ac1c422696c331a3e.json  query-373bce279f0db8fa1d7d56d5c1a1368e60a2ce3c6a945a61214ada35adac9b24.json  query-3b340422028acd4684066c224147112db05638e687a400d59f784f12301e1909.json  query-3f25e0db964fe0253cf06a5283b4391d666687dcee0668c79720b924a1497411.json  query-417fcd01a16ad6d4ed4c9e9020aafc3fa1636023d0971a3b0b387be4dad6e604.json  query-48a4e49c9558963c4dfbf7c35d0524fe4e03a0ea6d11de3c3f697f60bb739c42.json  query-4f282b368345297cd4051ee5944f15308896e08ba2e877986766d0a08af23acf.json  query-518cc793972a60408df254fccfa13a1d7693a73af19957e831a5921f9d811bdb.json  query-593cf508681ea2df4bd5a2d5e6e9697a907ef217dddae67a6f91ee09f4b904e5.json  query-59a20a8bbc2f3be6b54ba7eb5ad8a98148974dd18f0024e691635a0f6e679a51.json  query-5efed2316adb8e7a977b7f6022d340d2705d70f9c571c57303c92762dc93a96f.json  query-600b3b1a8815aff46fd1c72ac22ea8dd9b2e311a1501d9e92b9ac18dcf66ca8f.json  query-6063272ff8f70ee9e677e7ba892a942a8a61e23fc8e753cbded1feb6743cc102.json  query-619e034a210b4c9c1ea1a81266e0b6bb3bb0fffb8335a659ac23290b5590e66e.json  query-6707d728e08e3368e8d2573be1f8be5f53e065beb4aa8d34a6d0d9bb6edb8813.json  query-672f375c0f820c1d0c409aacd845d54d64214b4f38e0dd8bf720cfb19d73e2ef.json  query-6bd2b374bafbfdaedb681fe7905eddeaa044a452ae2eb3ef76b81cbc9240c28e.json  (+24 more)
DB/: dummy_data.sql  test_data.sql  (+1 more)
backend/crates/appointment_service/: Cargo.toml
backend/crates/appointment_service/src/: app.rs  domain.rs  lib.rs
backend/crates/appointment_service/src/infra/: http.rs  repo_sqlx.rs
backend/crates/auth_service/: Cargo.toml
backend/crates/auth_service/src/: app.rs  domain.rs
backend/crates/auth_service/src/infra/: http.rs  repo_sqlx.rs
backend/crates/common/: Cargo.toml
backend/crates/common/src/: auth.rs  config.rs  error.rs  lib.rs  password.rs
backend/crates/openapi/: Cargo.toml
backend/crates/openapi/src/: lib.rs
backend/crates/shipping_service/: Cargo.toml
backend/crates/shipping_service/src/: app.rs  domain.rs
backend/crates/shipping_service/src/infra/: http.rs  repo_sqlx.rs
(+63 files in other folders)
