[package]
name = "auth_service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
common = { version = "0.1.0", path = "../common" }
db = { version = "0.1.0", path = "../db" }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "time", "uuid"] }
uuid = { version = "1", features = ["serde"] }
utoipa = { version = "5.4.0", features = ["uuid"] }
