[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
dotenvy = "0.15.7"
sqlx = "0.8.6"
thiserror = "2.0.17"
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3", features = ["serde"] }
uuid = { version = "1", features = ["serde"] }
jsonwebtoken = "9"
async-trait = "0.1"
