[package]
name = "openapi"
version = "0.1.0"
edition = "2024"

[dependencies]
appointment_service = { version = "0.1.0", path = "../appointment_service" }
axum = "0.8.6"
utoipa = "5.4.0"
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
