[package]
name = "shipping_service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
common = { version = "0.1.0", path = "../common" }
db = { version = "0.1.0", path = "../db" }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "time", "uuid", "postgres"] }
time = { version = "0.3.44", features = ["macros", "serde"] }
utoipa = { version = "5.4.0", features = ["time"] }
uuid = { version = "1.18.1", features = ["serde"] }
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls"] }
anyhow = "1.0.100"
tracing = "0.1.41"
